Yetus changes